editing files and paths

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./costume/style.css">
+    <link rel="stylesheet" href="./assets/Css/style.css">
     <title>Ghalia Sami</title>
 </head>
 
@@ -28,7 +28,7 @@
 
                 </li>
                 <li>
-                    <a href="./costume/Ghalia-Sami.pdf">Resume</a>
+                    <a href="./assets/Resume/Ghalia-Sami.pdf">Resume</a>
 
                 </li>
                 <li>
@@ -44,7 +44,7 @@
         <!--bio and photo container-->
         <section class="bio">
             <div class="photo">
-                <img src="./Pictures/Untitled.jpg" alt="Ghalia's pic"/>
+                <img src="./assets/Pictures/Untitled.jpg" alt="Ghalia's pic"/>
             </div>
 
             <div class="about-me"> 
@@ -81,7 +81,7 @@
 
             <div class="proj-1">
                 
-                <a href="https://ghaliarose89.github.io/Run-Buddy/"> Run Buddy HTML/CSS</a>
+                <a href="https://ghaliarose89.github.io/Run-Buddy/"> Run Buddy <br/> HTML/CSS</a>
                       
             </div>
 
