--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 </div>
 
                 <div class="contact-1 contact-sizing">
-                    <a href="https://www.linkedin.com/in/ghalia-sami-063a6a122/">Git Hub</a>
+                    <a href="https://github.com/ghaliarose89">Git Hub</a>
                 </div>
              
             </div>
