--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
             <div class="proj-1">
                 
-                <a href="https://ghaliarose89.github.io/Run-Buddy/"> Run Buddy <br/> HTML/CSS</a>
+                <a href="https://ghaliarose89.github.io/pet-search/"> PET Search <br/> HTML/CSS</a>
                       
             </div>
 
